# docker-multistage-builds

./: .gitignore  README.md  SIZE_COMPARISON.md
.github/workflows/: docker-build.yml
advanced/: build-args.Dockerfile  debug-variant.Dockerfile  layer-caching.Dockerfile
golang/: Dockerfile  Dockerfile.secure  README.md  go.mod  main.go
java/: Dockerfile  Dockerfile.secure  README.md  pom.xml
java/src/main/java/com/example/app/controller/: ItemController.java
java/src/main/resources/: application.properties
java/src/main/resources/templates/: home.html
nodejs/: Dockerfile  Dockerfile.secure  README.md  package.json
nodejs/src/: server.js
python/: Dockerfile  Dockerfile.secure  README.md  pyproject.toml
python/app/: main.py
scripts/: build-and-compare.sh  demo.sh  run-examples.sh
