[tool.poetry]
name = "python-multistage-example"
version = "0.1.0"
description = "Python example for Docker multi-stage builds"
authors = ["Mahitha Adapa <example@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
